Repair Collapsing Main Menu

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@ html{
     background-color: var(--grey);
 }
 
-*{
+*, ::before, ::after{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -44,7 +44,6 @@ a{
 }
 
 a:hover{
-    
     color: var(--blue)
 }
 
